Separate modal component to fix flicker

--- a/src/styles/views/Leaderboard.scss
+++ b/src/styles/views/Leaderboard.scss
@@ -63,10 +63,16 @@ body {
     margin-bottom: 2em;
   }
 
-  &.best-meme-image {
+  &.list-meme {
+    cursor: pointer;
+  }
+
+  &.special-meme {
     &:hover{
       box-shadow: 0 4px 6px rgba(255, 255, 255, 0.7);
     }
+    border: solid white 5px;
+    cursor: pointer;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.4);
     margin-bottom:0.5em;
     transition: all 0.3s ease;
